--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
-Decentralized To-Do List
 {
-  "name": "Project-Title",
+  "name": "Decentralized To-Do List",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
